editted page overflow on medium screens and fixed background image color

--- a/src/components/sections/introduction/_introduction.scss
+++ b/src/components/sections/introduction/_introduction.scss
@@ -4,6 +4,7 @@
 @include respond(medium) {
   .section-introduction__container {
     padding-top: 15rem;
+    max-width: 100%;
   }
 }
 .section-introduction {
